--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A generator of Polish sayings with translated items to English and Portuguese.",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch",
-    "live-server": "live-server --port=3000 --open=./dist",
+    "webpack": "webpack",
     "start": "webpack-dev-server"
   },
   "repository": {
@@ -21,14 +19,11 @@
   "homepage": "https://github.com/rafaelsaback/polish-sayings-generator#readme",
   "devDependencies": {
     "css-loader": "^1.0.0",
-    "live-server": "^1.2.0",
     "node-sass": "^4.9.4",
-    "npm-run-all": "^4.1.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
-
 }
